--- a/webview/package.json
+++ b/webview/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
     "@next/font": "13.2.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.2",
     "next": "13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "sass": "^1.58.3"
   },
   "devDependencies": {
