--- a/webview/package.json
+++ b/webview/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.2.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.2",
+    "ethers": "^6.0.8",
     "next": "13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
